:bug: Increase status panel z-index
Fixes #301

--- a/styles/kite-status-panel.less
+++ b/styles/kite-status-panel.less
@@ -11,6 +11,7 @@ kite-status-panel {
   min-width: 200px;
   transform: translate(-100%, -100%);
   border-radius: 4px;
+  z-index: 100;
 
   .enterprise {
     vertical-align: middle;
